--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
 spring.application.name=Projeto-Delivery-API
+
+server.port = 8081
+
+# Configuração de H2 DataBase
+
+spring.datasource.url=jdbc:h2:mem:diliverydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+
+# Console H2
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+#
+
+#  JPA/Hibernate
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.shows-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações de desenvolvimento
+
+spring.devtools.restart.enabled=true
+
+# Configurações especificas para JDK21
+
+spring.jpa.open-in-view=false
+logging.level.org.springframework.web=DEBUG
+
+# Executar script SQL automaticamente
+
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
